--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -37,31 +37,30 @@
             </div>
         </div>
     </div>
-    <div id="link">
-        <div id="contact">
-            <ul>
-                <li>
-                    <span>Tổng đài tư vấn: </span>
-                    <a href="#">MISA SUPPORT</a>
-                </li>
-                <li>
-                    <span>Email: </span>
-                    <a href="#">support@misa.com.vn</a>
-                </li>
-                <li>
-                    <a href="#">Hướng dẫn sử dụng</a>
-                </li>
-            </ul>
-        </div>
-        <div id="time">
-            <p>Thời gian làm việc: Thứ 2 - Thứ 6: Từ 7:30 đến 22:00. Thứ 7, Chủ nhật: Sáng 8:00 đến 12:00; Chiều 12:30 đến 22:00</p>
-        </div>
-        <div>
-
-        </div>
-    </div>
     <div id="footer">
-        <p>Copyright © 2017 - 2019 MISA JSC <a>www.misa.com.vn</a></p>
+        <div id="link">
+            <div id="contact">
+                <ul>
+                    <li>
+                        <span>Tổng đài tư vấn: </span>
+                        <a href="#">MISA SUPPORT</a>
+                    </li>
+                    <li>
+                        <span>Email: </span>
+                        <a href="#">support@misa.com.vn</a>
+                    </li>
+                    <li>
+                        <a href="#">Hướng dẫn sử dụng</a>
+                    </li>
+                </ul>
+            </div>
+            <div id="time">
+                <p>Thời gian làm việc: Thứ 2 - Thứ 6: Từ 7:30 đến 22:00. Thứ 7, Chủ nhật: Sáng 8:00 đến 12:00; Chiều 12:30 đến 22:00</p>
+            </div>
+        </div>
+        <div id="copyright">
+            <p>Copyright © 2017 - 2019 MISA JSC <a>www.misa.com.vn</a></p>
+        </div>
     </div>
     <script src="Scripts/jquery-3.4.1.min.js"></script>
 </body>
