--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         </div>
     </div>
     <script src="Scripts/jquery-3.4.1.min.js"></script>
+    <script src="Scripts/validation.js"></script>
 </body>
 </html>
 
