--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="CSS/style.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:400,500,700&display=swap" rel="stylesheet">
     
-    <title>HOÀNG MIN</title>
+    <title>Nguyễn Vệt Hà</title>
 </head>
 <body>
     <div id="header"></div>
